--- a/be-patient-registration/src/app/app.html
+++ b/be-patient-registration/src/app/app.html
@@ -1,5 +1,30 @@
-<!-- src/app/app.html -->
+<!-- src/app/app.html
 
 <div class="app-container">
+  <router-outlet></router-outlet>
+</div> -->
+
+
+<nav class="navbar navbar-expand navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">BePatientRegistration</a>
+
+    <div class="navbar-nav">
+      <a class="nav-link"
+         routerLink="/patients"
+         routerLinkActive="active"
+         [routerLinkActiveOptions]="{ exact: true }">
+        Pacientes
+      </a>
+      <a class="nav-link"
+         routerLink="/health-plans"
+         routerLinkActive="active">
+        Convênios
+      </a>
+    </div>
+  </div>
+</nav>
+
+<div class="container mt-4">
   <router-outlet></router-outlet>
 </div>
