ajustes.. build powershell

--- a/be-patient-registration/src/app/pages/health-plans/health-plans-list.component.html
+++ b/be-patient-registration/src/app/pages/health-plans/health-plans-list.component.html
@@ -1,24 +1,20 @@
-<!-- src/app/pages/health-plans/health-plans-list.component.html -->
 <h2>Convênios</h2>
 
-<div *ngIf="error" class="text-danger mb-2">
-  {{ error }}
-</div>
+<div *ngIf="healthPlans.length > 0; else noPlans">
+  <table class="table table-striped">
+    <thead>
+      <tr>
+        <th>Nome</th>
+      </tr>
+    </thead>
 
-<table *ngIf="plans.length > 0; else noPlans" class="table table-striped">
-  <thead>
-    <tr>
-      <th>Nome</th>
-      <th>Código</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let plan of plans">
-      <td>{{ plan.name }}</td>
-      <!-- <td>{{ plan.code }}</td> -->
-    </tr>
-  </tbody>
-</table>
+    <tbody>
+      <tr *ngFor="let plan of healthPlans">
+        <td>{{ plan.name }}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
 
 <ng-template #noPlans>
   <p>Nenhum convênio cadastrado.</p>
