--- a/be-patient-registration/src/app/app.html
+++ b/be-patient-registration/src/app/app.html
@@ -10,10 +10,16 @@
     <a class="navbar-brand" href="#">BePatientRegistration</a>
 
     <div class="navbar-nav">
-      <a class="nav-link"
+      <!-- <a class="nav-link"
          routerLink="/patients"
          routerLinkActive="active"
          [routerLinkActiveOptions]="{ exact: true }">
+        Pacientes
+      </a> -->
+      <a class="nav-link"
+         routerLink="/patients"
+         routerLinkActive="active"
+         >
         Pacientes
       </a>
       <a class="nav-link"
